# demo-8eyuba

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
src/backend/: .dockerignore  .env.example  Dockerfile  README.md  airflow.cfg  conftest.py  constraints.txt  docker-compose.yml  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  tsconfig.json  webserver_config.py
src/backend/ci-cd/: approval-workflow.json  cloudbuild.yaml  deploy-dev.sh  deploy-prod.sh  deploy-qa.sh  github-actions-deploy.yml  github-actions-pr.yml  github-actions-test.yml
src/backend/config/: __init__.py  composer_dev.py  composer_prod.py  composer_qa.py  connections.json  pools.json  variables.json
src/backend/dags/: README.md  __init__.py  data_sync.py  etl_main.py  example_dag_basic.py  example_dag_taskflow.py  reports_gen.py
src/backend/dags/utils/: __init__.py  alert_utils.py  db_utils.py  gcp_utils.py  validation_utils.py
src/backend/docs/: best_practices.md  changelog.md  composer2_architecture.md  deployment_guide.md  migration_guide.md  operator_migration.md  security_guidelines.md
src/backend/migrations/: __init__.py  migration_airflow1_to_airflow2.py
src/backend/migrations/alembic_migrations/: __init__.py  env.py
src/backend/migrations/alembic_migrations/versions/: __init__.py  initial_schema.py  updated_schema.py
src/backend/monitoring/alerts/: composer_health.yaml  dag_failure.yaml  task_duration.yaml
src/backend/monitoring/dashboards/: composer_overview.json  dag_performance.json  task_performance.json
src/backend/plugins/: __init__.py
src/backend/plugins/hooks/: __init__.py  custom_gcp_hook.py  custom_http_hook.py  custom_postgres_hook.py
src/backend/plugins/macros/: __init__.py  custom_macros.py
src/backend/plugins/operators/: __init__.py  custom_gcp_operator.py  custom_http_operator.py  custom_postgres_operator.py
src/backend/plugins/sensors/: __init__.py  custom_gcp_sensor.py  custom_http_sensor.py  custom_postgres_sensor.py
src/backend/providers/: __init__.py
src/backend/providers/custom_provider/: __init__.py
src/backend/providers/custom_provider/example_modules/: __init__.py
src/backend/providers/custom_provider/hooks/: __init__.py
src/backend/providers/custom_provider/operators/: __init__.py
src/backend/providers/custom_provider/sensors/: __init__.py
src/backend/scripts/: __init__.py  backup_metadata.py  deploy_dags.py  import_connections.py  import_variables.py  restore_metadata.py  rotate_secrets.py  setup_composer.py  validate_dags.py
src/backend/terraform/: __init__.py
src/backend/terraform/composer2_dev/: main.tf  outputs.tf  variables.tf
src/backend/terraform/composer2_modules/composer/: main.tf  outputs.tf  variables.tf
src/backend/terraform/composer2_modules/networking/: main.tf  outputs.tf  variables.tf
src/backend/terraform/composer2_modules/security/: main.tf  outputs.tf  (+1 more)
src/backend/terraform/composer2_prod/: main.tf  outputs.tf  variables.tf
src/backend/terraform/composer2_qa/: main.tf  outputs.tf  variables.tf
(+231 files in other folders)
